# memlife

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: RELEASE_CHECKLIST.md  ROADMAP.md  ROADMAP_v2.md  architecture.md  refactor-store-split.md  roadmap_0.6.0.md  roadmap_0.6.12.md
examples/: mcp_server.py  quickstart.py
src/memlife/: __init__.py  _embeddings.py  _episodes.py  _facts.py  _gc.py  _journal.py  _locked_conn.py  _runs.py  _schema.py  _triples.py  _utils.py  binary_vectors.py  config.py  embedders.py  entity_extractor.py  gc.py  io.py  llm.py  mcp_server.py  memorias.py  models.py  namespace.py  polyphonic.py  protocols.py  reflection.py  retrieval.py  store.py  sync_store.py  vec_backend.py  vectors.py
src/memlife/adapters/: __init__.py  ollama.py  openai.py  sentence_transformers.py
src/memlife/vector_backends/: __init__.py  base.py  binary_backend.py  json_backend.py  sqlite_vec_backend.py
tests/: conftest.py  test_annotations.py  test_belief_network.py  test_binary_vectors.py  test_config.py  test_embedding_cache.py  test_entity_extraction.py  test_gap_markers.py  test_graph_retrieval.py  test_integration.py  test_lifecycle.py  test_locked_conn.py  test_mcp.py  test_memorias.py  test_metrics.py  test_namespace.py  test_namespaces.py  test_ollama_adapter.py  test_polyphonic.py  test_recall_diagnostics.py  test_reflection.py  test_reflection_audit.py  test_retrieval.py  test_sqlite_vec.py  test_sqlite_vec_backfill.py  test_sqlite_vec_recall.py  test_store.py  test_sync_store.py  test_temporal_triples.py  test_tiered_decay.py  test_triples_graph.py  test_vector_backends.py  test_veracity.py
workspace/: roadmap_0.6.0.md  vector_backend_roadmap_0.5.0.md
