[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memlife"
version = "0.1.0b0"
description = "Memory that degrades gracefully — four-tier lifecycle memory for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "James"}]
keywords = ["memory", "ai", "agent", "lifecycle", "decay", "reflection", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
ollama = ["aiohttp"]
openai = ["openai"]
sentence-transformers = ["sentence-transformers"]
mcp = ["mcp"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
memlife-mcp-server = "memlife.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"