[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memlife"
version = "0.6.11"
description = "Memory that degrades gracefully — four-tier lifecycle memory for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []
authors = [{name = "EzyRider", email = "ezyrider70@gmail.com"}]
keywords = ["memory", "ai", "agent", "lifecycle", "decay", "reflection", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
ollama = ["aiohttp"]
openai = ["openai"]
sentence-transformers = ["sentence-transformers"]
sqlite-vec = [
    "sqlite-vec",
    "pysqlite3-binary ; platform_system=='Linux'",
]
mcp = ["mcp"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
memlife-mcp-server = "memlife.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# E402: store.py intentionally has imports after module-level constants.
# F841: test files have intentionally unused locals to demonstrate the API.
# BLE001/S110: memlife uses broad defensive exception handling at adapter
# boundaries, optional-dependency fallbacks, and parse/metrics fallbacks.
ignore = ["E402", "BLE001", "S110"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]